--- a/Analysis/Post Processing/Layout.ui
+++ b/Analysis/Post Processing/Layout.ui
@@ -23,6 +23,9 @@
       <height>22</height>
      </rect>
     </property>
+    <property name="displayFormat">
+     <string>M/d/yyyy h:mm:ss AP</string>
+    </property>
    </widget>
    <widget class="QDateTimeEdit" name="endTimeInput">
     <property name="geometry">
@@ -32,6 +35,9 @@
       <width>194</width>
       <height>22</height>
      </rect>
+    </property>
+    <property name="displayFormat">
+     <string>M/d/yyyy h:mm:ss AP</string>
     </property>
    </widget>
    <widget class="QPushButton" name="btn_refresh">
