--- a/Analysis/Post Processing/Layout.ui
+++ b/Analysis/Post Processing/Layout.ui
@@ -37,10 +37,16 @@
      </rect>
     </property>
     <property name="currentSection">
-     <enum>QDateTimeEdit::SecondSection</enum>
+     <enum>QDateTimeEdit::MonthSection</enum>
     </property>
     <property name="displayFormat">
-     <string>M/d/yyyy h:mm:ss:ms AP</string>
+     <string>M/d/yyyy h:mm:ss:ms </string>
+    </property>
+    <property name="currentSectionIndex">
+     <number>0</number>
+    </property>
+    <property name="timeSpec">
+     <enum>Qt::LocalTime</enum>
     </property>
    </widget>
    <widget class="QPushButton" name="btn_refresh">
