--- a/Analysis/Post Processing/Layout.ui
+++ b/Analysis/Post Processing/Layout.ui
@@ -6,12 +6,18 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>765</width>
-    <height>438</height>
+    <width>748</width>
+    <height>495</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>MainWindow</string>
+  </property>
+  <property name="statusTip">
+   <string/>
+  </property>
+  <property name="accessibleName">
+   <string/>
   </property>
   <widget class="QWidget" name="centralwidget">
    <widget class="QDateTimeEdit" name="startTimeInput">
@@ -46,7 +52,7 @@
      <number>0</number>
     </property>
     <property name="timeSpec">
-     <enum>Qt::LocalTime</enum>
+     <enum>Qt::TimeZone</enum>
     </property>
    </widget>
    <widget class="QPushButton" name="btn_refresh">
@@ -65,7 +71,7 @@
    <widget class="QPushButton" name="btn_parse">
     <property name="geometry">
      <rect>
-      <x>240</x>
+      <x>300</x>
       <y>350</y>
       <width>93</width>
       <height>28</height>
@@ -208,13 +214,59 @@
      <bool>false</bool>
     </property>
    </widget>
+   <widget class="QLineEdit" name="folderEdit">
+    <property name="geometry">
+     <rect>
+      <x>130</x>
+      <y>390</y>
+      <width>301</width>
+      <height>22</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QLineEdit" name="filenameEdit">
+    <property name="geometry">
+     <rect>
+      <x>130</x>
+      <y>420</y>
+      <width>301</width>
+      <height>22</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_4">
+    <property name="geometry">
+     <rect>
+      <x>40</x>
+      <y>390</y>
+      <width>55</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Folder</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_5">
+    <property name="geometry">
+     <rect>
+      <x>40</x>
+      <y>420</y>
+      <width>55</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Filename</string>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>765</width>
+     <width>748</width>
      <height>26</height>
     </rect>
    </property>
