--- a/Analysis/Post Processing/Layout.ui
+++ b/Analysis/Post Processing/Layout.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>770</width>
-    <height>502</height>
+    <width>767</width>
+    <height>590</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -23,11 +23,14 @@
    <widget class="QDateTimeEdit" name="startTimeInput">
     <property name="geometry">
      <rect>
-      <x>40</x>
-      <y>310</y>
+      <x>30</x>
+      <y>350</y>
       <width>194</width>
       <height>22</height>
      </rect>
+    </property>
+    <property name="currentSection">
+     <enum>QDateTimeEdit::MinuteSection</enum>
     </property>
     <property name="displayFormat">
      <string>M/d/yyyy h:mm:ss AP</string>
@@ -36,8 +39,8 @@
    <widget class="QDateTimeEdit" name="endTimeInput">
     <property name="geometry">
      <rect>
-      <x>240</x>
-      <y>310</y>
+      <x>230</x>
+      <y>350</y>
       <width>194</width>
       <height>22</height>
      </rect>
@@ -46,7 +49,7 @@
      <enum>QDateTimeEdit::MonthSection</enum>
     </property>
     <property name="displayFormat">
-     <string>M/d/yyyy h:mm:ss:ms </string>
+     <string>M/d/yyyy h:mm:ss</string>
     </property>
     <property name="currentSectionIndex">
      <number>0</number>
@@ -58,8 +61,8 @@
    <widget class="QPushButton" name="btn_refresh">
     <property name="geometry">
      <rect>
-      <x>140</x>
-      <y>350</y>
+      <x>310</x>
+      <y>310</y>
       <width>93</width>
       <height>28</height>
      </rect>
@@ -71,8 +74,8 @@
    <widget class="QPushButton" name="btn_parse">
     <property name="geometry">
      <rect>
-      <x>300</x>
-      <y>350</y>
+      <x>130</x>
+      <y>390</y>
       <width>93</width>
       <height>28</height>
      </rect>
@@ -84,8 +87,8 @@
    <widget class="QPushButton" name="btn_open">
     <property name="geometry">
      <rect>
-      <x>40</x>
-      <y>350</y>
+      <x>30</x>
+      <y>390</y>
       <width>93</width>
       <height>28</height>
      </rect>
@@ -104,23 +107,13 @@
      </rect>
     </property>
    </widget>
-   <widget class="QWidget" name="widget" native="true">
-    <property name="geometry">
-     <rect>
-      <x>40</x>
-      <y>40</y>
-      <width>381</width>
-      <height>241</height>
-     </rect>
-    </property>
-   </widget>
    <widget class="QListWidget" name="selectChannel">
     <property name="geometry">
      <rect>
       <x>600</x>
-      <y>320</y>
+      <y>340</y>
       <width>151</width>
-      <height>121</height>
+      <height>171</height>
      </rect>
     </property>
     <property name="isWrapping" stdset="0">
@@ -154,8 +147,8 @@
    <widget class="QLabel" name="label">
     <property name="geometry">
      <rect>
-      <x>620</x>
-      <y>290</y>
+      <x>630</x>
+      <y>310</y>
       <width>91</width>
       <height>20</height>
      </rect>
@@ -167,8 +160,8 @@
    <widget class="QLabel" name="label_2">
     <property name="geometry">
      <rect>
-      <x>460</x>
-      <y>290</y>
+      <x>480</x>
+      <y>310</y>
       <width>91</width>
       <height>20</height>
      </rect>
@@ -181,9 +174,9 @@
     <property name="geometry">
      <rect>
       <x>450</x>
-      <y>320</y>
+      <y>340</y>
       <width>141</width>
-      <height>121</height>
+      <height>171</height>
      </rect>
     </property>
     <property name="isWrapping" stdset="0">
@@ -217,8 +210,8 @@
    <widget class="QLineEdit" name="folderEdit">
     <property name="geometry">
      <rect>
-      <x>130</x>
-      <y>390</y>
+      <x>120</x>
+      <y>460</y>
       <width>301</width>
       <height>22</height>
      </rect>
@@ -227,8 +220,8 @@
    <widget class="QLineEdit" name="filenameEdit">
     <property name="geometry">
      <rect>
-      <x>130</x>
-      <y>420</y>
+      <x>120</x>
+      <y>490</y>
       <width>301</width>
       <height>22</height>
      </rect>
@@ -237,8 +230,8 @@
    <widget class="QLabel" name="label_4">
     <property name="geometry">
      <rect>
-      <x>40</x>
-      <y>390</y>
+      <x>30</x>
+      <y>460</y>
       <width>55</width>
       <height>16</height>
      </rect>
@@ -250,8 +243,8 @@
    <widget class="QLabel" name="label_5">
     <property name="geometry">
      <rect>
-      <x>40</x>
-      <y>420</y>
+      <x>30</x>
+      <y>490</y>
       <width>55</width>
       <height>16</height>
      </rect>
@@ -260,13 +253,81 @@
      <string>Filename</string>
     </property>
    </widget>
+   <widget class="QLabel" name="label_3">
+    <property name="geometry">
+     <rect>
+      <x>460</x>
+      <y>10</y>
+      <width>291</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Events within window</string>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignCenter</set>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="btn_zoomsel">
+    <property name="geometry">
+     <rect>
+      <x>30</x>
+      <y>310</y>
+      <width>91</width>
+      <height>28</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Zoom Select</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="btn_zoomout">
+    <property name="geometry">
+     <rect>
+      <x>130</x>
+      <y>310</y>
+      <width>81</width>
+      <height>28</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Zoom out</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="btn_fitall">
+    <property name="geometry">
+     <rect>
+      <x>220</x>
+      <y>310</y>
+      <width>81</width>
+      <height>28</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Fit all</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_6">
+    <property name="geometry">
+     <rect>
+      <x>120</x>
+      <y>430</y>
+      <width>291</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>File information from event before 1st marker</string>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>770</width>
+     <width>767</width>
      <height>26</height>
     </rect>
    </property>
