--- a/Analysis/Post Processing/Layout.ui
+++ b/Analysis/Post Processing/Layout.ui
@@ -562,14 +562,47 @@
    <widget class="QPushButton" name="btn_parse">
     <property name="geometry">
      <rect>
-      <x>220</x>
+      <x>310</x>
       <y>520</y>
       <width>111</width>
-      <height>28</height>
+      <height>31</height>
      </rect>
     </property>
     <property name="text">
      <string>Parse</string>
+    </property>
+   </widget>
+   <widget class="QComboBox" name="combo_times">
+    <property name="geometry">
+     <rect>
+      <x>210</x>
+      <y>530</y>
+      <width>81</width>
+      <height>22</height>
+     </rect>
+    </property>
+    <item>
+     <property name="text">
+      <string>Eventlog</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>Markers</string>
+     </property>
+    </item>
+   </widget>
+   <widget class="QLabel" name="label_15">
+    <property name="geometry">
+     <rect>
+      <x>210</x>
+      <y>510</y>
+      <width>55</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Times</string>
     </property>
    </widget>
   </widget>
