--- a/Analysis/PostProcessor/Layout.ui
+++ b/Analysis/PostProcessor/Layout.ui
@@ -469,7 +469,7 @@
      <rect>
       <x>30</x>
       <y>530</y>
-      <width>81</width>
+      <width>161</width>
       <height>22</height>
      </rect>
     </property>
@@ -479,18 +479,18 @@
      <rect>
       <x>30</x>
       <y>510</y>
-      <width>55</width>
+      <width>161</width>
       <height>16</height>
      </rect>
     </property>
     <property name="text">
-     <string>routine</string>
+     <string>Post Processing Routine</string>
     </property>
    </widget>
    <widget class="QLabel" name="label_14">
     <property name="geometry">
      <rect>
-      <x>120</x>
+      <x>200</x>
       <y>510</y>
       <width>55</width>
       <height>16</height>
@@ -503,7 +503,7 @@
    <widget class="QComboBox" name="combo_files">
     <property name="geometry">
      <rect>
-      <x>120</x>
+      <x>200</x>
       <y>530</y>
       <width>81</width>
       <height>22</height>
@@ -523,9 +523,9 @@
    <widget class="QPushButton" name="btn_parse">
     <property name="geometry">
      <rect>
-      <x>300</x>
-      <y>520</y>
-      <width>91</width>
+      <x>380</x>
+      <y>522</y>
+      <width>61</width>
       <height>31</height>
      </rect>
     </property>
@@ -536,7 +536,7 @@
    <widget class="QComboBox" name="combo_times">
     <property name="geometry">
      <rect>
-      <x>210</x>
+      <x>290</x>
       <y>530</y>
       <width>81</width>
       <height>22</height>
@@ -556,7 +556,7 @@
    <widget class="QLabel" name="label_15">
     <property name="geometry">
      <rect>
-      <x>210</x>
+      <x>290</x>
       <y>510</y>
       <width>55</width>
       <height>16</height>
