--- a/Analysis/PostProcessor/Layout.ui
+++ b/Analysis/PostProcessor/Layout.ui
@@ -199,7 +199,7 @@
      <rect>
       <x>100</x>
       <y>450</y>
-      <width>321</width>
+      <width>341</width>
       <height>22</height>
      </rect>
     </property>
@@ -209,7 +209,7 @@
      <rect>
       <x>100</x>
       <y>480</y>
-      <width>321</width>
+      <width>341</width>
       <height>22</height>
      </rect>
     </property>
@@ -467,9 +467,9 @@
    <widget class="QComboBox" name="combo_routines">
     <property name="geometry">
      <rect>
-      <x>30</x>
+      <x>10</x>
       <y>530</y>
-      <width>161</width>
+      <width>151</width>
       <height>22</height>
      </rect>
     </property>
@@ -477,9 +477,9 @@
    <widget class="QLabel" name="label_13">
     <property name="geometry">
      <rect>
-      <x>30</x>
+      <x>10</x>
       <y>510</y>
-      <width>161</width>
+      <width>151</width>
       <height>16</height>
      </rect>
     </property>
@@ -490,7 +490,7 @@
    <widget class="QLabel" name="label_14">
     <property name="geometry">
      <rect>
-      <x>200</x>
+      <x>170</x>
       <y>510</y>
       <width>55</width>
       <height>16</height>
@@ -503,9 +503,9 @@
    <widget class="QComboBox" name="combo_files">
     <property name="geometry">
      <rect>
-      <x>200</x>
+      <x>170</x>
       <y>530</y>
-      <width>81</width>
+      <width>91</width>
       <height>22</height>
      </rect>
     </property>
@@ -523,9 +523,9 @@
    <widget class="QPushButton" name="btn_parse">
     <property name="geometry">
      <rect>
-      <x>380</x>
-      <y>522</y>
-      <width>61</width>
+      <x>396</x>
+      <y>523</y>
+      <width>51</width>
       <height>31</height>
      </rect>
     </property>
@@ -536,12 +536,17 @@
    <widget class="QComboBox" name="combo_times">
     <property name="geometry">
      <rect>
-      <x>290</x>
+      <x>270</x>
       <y>530</y>
-      <width>81</width>
+      <width>121</width>
       <height>22</height>
      </rect>
     </property>
+    <item>
+     <property name="text">
+      <string>Markers</string>
+     </property>
+    </item>
     <item>
      <property name="text">
       <string>Eventlog</string>
@@ -549,14 +554,14 @@
     </item>
     <item>
      <property name="text">
-      <string>Markers</string>
+      <string>Savetimes_PIMax</string>
      </property>
     </item>
    </widget>
    <widget class="QLabel" name="label_15">
     <property name="geometry">
      <rect>
-      <x>290</x>
+      <x>270</x>
       <y>510</y>
       <width>55</width>
       <height>16</height>
