--- a/Analysis/PostProcessor/Layout.ui
+++ b/Analysis/PostProcessor/Layout.ui
@@ -586,6 +586,8 @@
      <string>File</string>
     </property>
     <addaction name="actionOpen"/>
+    <addaction name="separator"/>
+    <addaction name="actionReload_ppr"/>
    </widget>
    <addaction name="menuFile"/>
   </widget>
@@ -593,6 +595,11 @@
   <action name="actionOpen">
    <property name="text">
     <string>Open</string>
+   </property>
+  </action>
+  <action name="actionReload_ppr">
+   <property name="text">
+    <string>Reload PPR</string>
    </property>
   </action>
  </widget>
