--- a/Analysis/PostProcessor/Layout.ui
+++ b/Analysis/PostProcessor/Layout.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>777</width>
-    <height>605</height>
+    <width>887</width>
+    <height>663</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -23,8 +23,8 @@
    <widget class="QDateTimeEdit" name="startTimeInput">
     <property name="geometry">
      <rect>
-      <x>30</x>
-      <y>350</y>
+      <x>80</x>
+      <y>4</y>
       <width>194</width>
       <height>22</height>
      </rect>
@@ -39,8 +39,8 @@
    <widget class="QDateTimeEdit" name="endTimeInput">
     <property name="geometry">
      <rect>
-      <x>230</x>
-      <y>350</y>
+      <x>360</x>
+      <y>4</y>
       <width>194</width>
       <height>22</height>
      </rect>
@@ -61,8 +61,8 @@
    <widget class="QPushButton" name="btn_refresh">
     <property name="geometry">
      <rect>
-      <x>372</x>
-      <y>310</y>
+      <x>0</x>
+      <y>190</y>
       <width>81</width>
       <height>28</height>
      </rect>
@@ -71,36 +71,23 @@
      <string>Refresh</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="btn_open">
+   <widget class="QTextBrowser" name="text_events">
     <property name="geometry">
      <rect>
-      <x>10</x>
-      <y>310</y>
-      <width>91</width>
-      <height>28</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Open File</string>
-    </property>
-   </widget>
-   <widget class="QTextBrowser" name="textBrowser">
-    <property name="geometry">
-     <rect>
-      <x>450</x>
-      <y>40</y>
-      <width>301</width>
-      <height>241</height>
+      <x>580</x>
+      <y>230</y>
+      <width>291</width>
+      <height>221</height>
      </rect>
     </property>
    </widget>
    <widget class="QListWidget" name="selectChannel">
     <property name="geometry">
      <rect>
-      <x>600</x>
-      <y>340</y>
-      <width>151</width>
-      <height>211</height>
+      <x>730</x>
+      <y>40</y>
+      <width>141</width>
+      <height>151</height>
      </rect>
     </property>
     <property name="isWrapping" stdset="0">
@@ -134,8 +121,8 @@
    <widget class="QLabel" name="label">
     <property name="geometry">
      <rect>
-      <x>630</x>
-      <y>310</y>
+      <x>750</x>
+      <y>10</y>
       <width>91</width>
       <height>20</height>
      </rect>
@@ -147,8 +134,8 @@
    <widget class="QLabel" name="label_2">
     <property name="geometry">
      <rect>
-      <x>480</x>
-      <y>310</y>
+      <x>600</x>
+      <y>10</y>
       <width>91</width>
       <height>20</height>
      </rect>
@@ -160,10 +147,10 @@
    <widget class="QListWidget" name="selectGroup">
     <property name="geometry">
      <rect>
-      <x>450</x>
-      <y>340</y>
-      <width>141</width>
-      <height>211</height>
+      <x>580</x>
+      <y>40</y>
+      <width>131</width>
+      <height>151</height>
      </rect>
     </property>
     <property name="isWrapping" stdset="0">
@@ -197,9 +184,9 @@
    <widget class="QLineEdit" name="folderEdit">
     <property name="geometry">
      <rect>
-      <x>100</x>
-      <y>450</y>
-      <width>341</width>
+      <x>60</x>
+      <y>480</y>
+      <width>301</width>
       <height>22</height>
      </rect>
     </property>
@@ -207,9 +194,9 @@
    <widget class="QLineEdit" name="filenameEdit">
     <property name="geometry">
      <rect>
-      <x>100</x>
+      <x>440</x>
       <y>480</y>
-      <width>341</width>
+      <width>291</width>
       <height>22</height>
      </rect>
     </property>
@@ -217,8 +204,8 @@
    <widget class="QLabel" name="label_4">
     <property name="geometry">
      <rect>
-      <x>30</x>
-      <y>450</y>
+      <x>10</x>
+      <y>480</y>
       <width>55</width>
       <height>16</height>
      </rect>
@@ -230,7 +217,7 @@
    <widget class="QLabel" name="label_5">
     <property name="geometry">
      <rect>
-      <x>30</x>
+      <x>380</x>
       <y>480</y>
       <width>55</width>
       <height>16</height>
@@ -243,8 +230,8 @@
    <widget class="QLabel" name="label_3">
     <property name="geometry">
      <rect>
-      <x>460</x>
-      <y>10</y>
+      <x>580</x>
+      <y>200</y>
       <width>291</width>
       <height>20</height>
      </rect>
@@ -259,8 +246,8 @@
    <widget class="QPushButton" name="btn_zoomsel">
     <property name="geometry">
      <rect>
-      <x>110</x>
-      <y>310</y>
+      <x>0</x>
+      <y>70</y>
       <width>81</width>
       <height>28</height>
      </rect>
@@ -272,8 +259,8 @@
    <widget class="QPushButton" name="btn_zoomout">
     <property name="geometry">
      <rect>
-      <x>200</x>
-      <y>310</y>
+      <x>0</x>
+      <y>110</y>
       <width>81</width>
       <height>28</height>
      </rect>
@@ -285,9 +272,9 @@
    <widget class="QPushButton" name="btn_fitall">
     <property name="geometry">
      <rect>
-      <x>290</x>
-      <y>310</y>
-      <width>71</width>
+      <x>0</x>
+      <y>150</y>
+      <width>81</width>
       <height>28</height>
      </rect>
     </property>
@@ -298,35 +285,25 @@
    <widget class="QLabel" name="label_6">
     <property name="geometry">
      <rect>
-      <x>30</x>
-      <y>420</y>
-      <width>291</width>
-      <height>20</height>
+      <x>740</x>
+      <y>473</y>
+      <width>151</width>
+      <height>31</height>
      </rect>
     </property>
     <property name="text">
-     <string>File information from event before 1st marker</string>
+     <string>File information from event before 1st cuttime.</string>
     </property>
-   </widget>
-   <widget class="QLineEdit" name="t_mean">
-    <property name="geometry">
-     <rect>
-      <x>10</x>
-      <y>400</y>
-      <width>70</width>
-      <height>22</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string/>
+    <property name="wordWrap">
+     <bool>true</bool>
     </property>
    </widget>
    <widget class="QLabel" name="label_7">
     <property name="geometry">
      <rect>
-      <x>30</x>
-      <y>380</y>
-      <width>55</width>
+      <x>41</x>
+      <y>411</y>
+      <width>31</width>
       <height>16</height>
      </rect>
     </property>
@@ -337,9 +314,9 @@
    <widget class="QLabel" name="label_8">
     <property name="geometry">
      <rect>
-      <x>100</x>
-      <y>380</y>
-      <width>55</width>
+      <x>135</x>
+      <y>411</y>
+      <width>40</width>
       <height>16</height>
      </rect>
     </property>
@@ -347,38 +324,12 @@
      <string>StdDev</string>
     </property>
    </widget>
-   <widget class="QLineEdit" name="t_std">
-    <property name="geometry">
-     <rect>
-      <x>80</x>
-      <y>400</y>
-      <width>70</width>
-      <height>22</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string/>
-    </property>
-   </widget>
-   <widget class="QLineEdit" name="t_skew">
-    <property name="geometry">
-     <rect>
-      <x>220</x>
-      <y>400</y>
-      <width>70</width>
-      <height>22</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string/>
-    </property>
-   </widget>
    <widget class="QLabel" name="label_9">
     <property name="geometry">
      <rect>
-      <x>240</x>
-      <y>380</y>
-      <width>55</width>
+      <x>324</x>
+      <y>411</y>
+      <width>31</width>
       <height>16</height>
      </rect>
     </property>
@@ -389,9 +340,9 @@
    <widget class="QLabel" name="label_10">
     <property name="geometry">
      <rect>
-      <x>170</x>
-      <y>380</y>
-      <width>55</width>
+      <x>230</x>
+      <y>411</y>
+      <width>41</width>
       <height>16</height>
      </rect>
     </property>
@@ -399,25 +350,12 @@
      <string>Median</string>
     </property>
    </widget>
-   <widget class="QLineEdit" name="t_med">
-    <property name="geometry">
-     <rect>
-      <x>150</x>
-      <y>400</y>
-      <width>70</width>
-      <height>22</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string/>
-    </property>
-   </widget>
    <widget class="QLabel" name="label_11">
     <property name="geometry">
      <rect>
-      <x>310</x>
-      <y>380</y>
-      <width>55</width>
+      <x>418</x>
+      <y>411</y>
+      <width>20</width>
       <height>16</height>
      </rect>
     </property>
@@ -425,38 +363,12 @@
      <string>Min</string>
     </property>
    </widget>
-   <widget class="QLineEdit" name="t_min">
-    <property name="geometry">
-     <rect>
-      <x>290</x>
-      <y>400</y>
-      <width>70</width>
-      <height>22</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string/>
-    </property>
-   </widget>
-   <widget class="QLineEdit" name="t_max">
-    <property name="geometry">
-     <rect>
-      <x>360</x>
-      <y>400</y>
-      <width>70</width>
-      <height>22</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string/>
-    </property>
-   </widget>
    <widget class="QLabel" name="label_12">
     <property name="geometry">
      <rect>
-      <x>380</x>
-      <y>380</y>
-      <width>55</width>
+      <x>513</x>
+      <y>411</y>
+      <width>23</width>
       <height>16</height>
      </rect>
     </property>
@@ -464,12 +376,12 @@
      <string>Max</string>
     </property>
    </widget>
-   <widget class="QComboBox" name="combo_routines">
+   <widget class="QComboBox" name="combo_function">
     <property name="geometry">
      <rect>
-      <x>10</x>
-      <y>530</y>
-      <width>151</width>
+      <x>20</x>
+      <y>580</y>
+      <width>181</width>
       <height>22</height>
      </rect>
     </property>
@@ -477,21 +389,21 @@
    <widget class="QLabel" name="label_13">
     <property name="geometry">
      <rect>
-      <x>10</x>
-      <y>510</y>
-      <width>151</width>
+      <x>80</x>
+      <y>560</y>
+      <width>61</width>
       <height>16</height>
      </rect>
     </property>
     <property name="text">
-     <string>Post Processing Routine</string>
+     <string>Function</string>
     </property>
    </widget>
    <widget class="QLabel" name="label_14">
     <property name="geometry">
      <rect>
-      <x>170</x>
-      <y>510</y>
+      <x>630</x>
+      <y>515</y>
       <width>55</width>
       <height>16</height>
      </rect>
@@ -503,9 +415,9 @@
    <widget class="QComboBox" name="combo_files">
     <property name="geometry">
      <rect>
-      <x>170</x>
-      <y>530</y>
-      <width>91</width>
+      <x>630</x>
+      <y>535</y>
+      <width>131</width>
       <height>22</height>
      </rect>
     </property>
@@ -523,22 +435,22 @@
    <widget class="QPushButton" name="btn_parse">
     <property name="geometry">
      <rect>
-      <x>396</x>
-      <y>523</y>
-      <width>51</width>
-      <height>31</height>
+      <x>773</x>
+      <y>532</y>
+      <width>91</width>
+      <height>71</height>
      </rect>
     </property>
     <property name="text">
-     <string>Parse</string>
+     <string>Process!</string>
     </property>
    </widget>
    <widget class="QComboBox" name="combo_times">
     <property name="geometry">
      <rect>
-      <x>270</x>
-      <y>530</y>
-      <width>121</width>
+      <x>630</x>
+      <y>580</y>
+      <width>131</width>
       <height>22</height>
      </rect>
     </property>
@@ -561,15 +473,170 @@
    <widget class="QLabel" name="label_15">
     <property name="geometry">
      <rect>
-      <x>270</x>
-      <y>510</y>
-      <width>55</width>
+      <x>630</x>
+      <y>560</y>
+      <width>91</width>
       <height>16</height>
      </rect>
     </property>
     <property name="text">
-     <string>Times</string>
+     <string>Cutting Times</string>
     </property>
+   </widget>
+   <widget class="QFrame" name="mplframe">
+    <property name="geometry">
+     <rect>
+      <x>90</x>
+      <y>40</y>
+      <width>471</width>
+      <height>361</height>
+     </rect>
+    </property>
+    <property name="frameShape">
+     <enum>QFrame::StyledPanel</enum>
+    </property>
+    <property name="frameShadow">
+     <enum>QFrame::Raised</enum>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_16">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>6</y>
+      <width>71</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Cut Time 1:</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_17">
+    <property name="geometry">
+     <rect>
+      <x>285</x>
+      <y>6</y>
+      <width>71</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Cut Time 2:</string>
+    </property>
+   </widget>
+   <widget class="Line" name="line">
+    <property name="geometry">
+     <rect>
+      <x>-20</x>
+      <y>460</y>
+      <width>921</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="orientation">
+     <enum>Qt::Horizontal</enum>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_18">
+    <property name="geometry">
+     <rect>
+      <x>40</x>
+      <y>510</y>
+      <width>151</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Post Processing Module</string>
+    </property>
+   </widget>
+   <widget class="QComboBox" name="combo_module">
+    <property name="geometry">
+     <rect>
+      <x>20</x>
+      <y>530</y>
+      <width>181</width>
+      <height>22</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_19">
+    <property name="geometry">
+     <rect>
+      <x>310</x>
+      <y>506</y>
+      <width>231</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Post Processing Function Docstring</string>
+    </property>
+   </widget>
+   <widget class="QTextBrowser" name="text_docstring">
+    <property name="geometry">
+     <rect>
+      <x>220</x>
+      <y>530</y>
+      <width>401</width>
+      <height>81</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QWidget" name="">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>430</y>
+      <width>561</width>
+      <height>24</height>
+     </rect>
+    </property>
+    <layout class="QHBoxLayout" name="horizontalLayout">
+     <item>
+      <widget class="QLineEdit" name="t_mean">
+       <property name="text">
+        <string/>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QLineEdit" name="t_std">
+       <property name="text">
+        <string/>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QLineEdit" name="t_med">
+       <property name="text">
+        <string/>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QLineEdit" name="t_skew">
+       <property name="text">
+        <string/>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QLineEdit" name="t_min">
+       <property name="text">
+        <string/>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QLineEdit" name="t_max">
+       <property name="text">
+        <string/>
+       </property>
+      </widget>
+     </item>
+    </layout>
    </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
@@ -577,7 +644,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>777</width>
+     <width>887</width>
      <height>26</height>
     </rect>
    </property>
