--- a/Analysis/PostProcessor/Layout.ui
+++ b/Analysis/PostProcessor/Layout.ui
@@ -672,6 +672,7 @@
      <string>File</string>
     </property>
     <addaction name="actionOpen"/>
+    <addaction name="actionOpen_Eventlog"/>
     <addaction name="separator"/>
     <addaction name="actionReload_ppr"/>
    </widget>
@@ -680,12 +681,17 @@
   <widget class="QStatusBar" name="statusbar"/>
   <action name="actionOpen">
    <property name="text">
-    <string>Open</string>
+    <string>Open Logfile</string>
    </property>
   </action>
   <action name="actionReload_ppr">
    <property name="text">
     <string>Reload PPR</string>
+   </property>
+  </action>
+  <action name="actionOpen_Eventlog">
+   <property name="text">
+    <string>Open Eventlog</string>
    </property>
   </action>
  </widget>
