--- a/Analysis/PostProcessor/Layout.ui
+++ b/Analysis/PostProcessor/Layout.ui
@@ -90,6 +90,9 @@
       <height>151</height>
      </rect>
     </property>
+    <property name="selectionMode">
+     <enum>QAbstractItemView::MultiSelection</enum>
+    </property>
     <property name="isWrapping" stdset="0">
      <bool>false</bool>
     </property>
@@ -152,6 +155,9 @@
       <width>141</width>
       <height>151</height>
      </rect>
+    </property>
+    <property name="selectionMode">
+     <enum>QAbstractItemView::MultiSelection</enum>
     </property>
     <property name="isWrapping" stdset="0">
      <bool>false</bool>
@@ -731,7 +737,14 @@
     <addaction name="separator"/>
     <addaction name="actionReload_ppr"/>
    </widget>
+   <widget class="QMenu" name="menuView">
+    <property name="title">
+     <string>View</string>
+    </property>
+    <addaction name="actionToggle_Legend"/>
+   </widget>
    <addaction name="menuFile"/>
+   <addaction name="menuView"/>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
   <action name="actionOpen">
@@ -747,6 +760,11 @@
   <action name="actionOpen_Eventlog">
    <property name="text">
     <string>Open Eventlog</string>
+   </property>
+  </action>
+  <action name="actionToggle_Legend">
+   <property name="text">
+    <string>Toggle Legend</string>
    </property>
   </action>
  </widget>
